--- a/static/html/index.html
+++ b/static/html/index.html
@@ -26,7 +26,7 @@
     };
 
     (function(d, s, id){
-        var js, fjs = d.getElementsByTagName(s)[0];
+        let js, fjs = d.getElementsByTagName(s)[0];
         if (d.getElementById(id)) {return;}
         js = d.createElement(s); js.id = id;
         js.src = "https://connect.facebook.net/en_US/sdk.js";
@@ -37,8 +37,8 @@
 
 
 <!-- modal window for creating new category -->
-<div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog">
-    <div id="newCatDialog" class="modal-dialog modal-sm" role="document">
+<div id="new-cat-dlg" class="modal fade" tabindex="-1" role="dialog">
+    <div id="new-cat-doc" class="modal-dialog modal-sm" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
@@ -50,6 +50,23 @@
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
                 <button type="button" class="btn btn-primary" data-dismiss="modal" onclick="createCategory()">OK</button>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+
+
+<!-- modal window for removing selected category -->
+<div id="remove-cat-dlg" class="modal fade" tabindex="-1" role="dialog">
+    <div id="remove-cat-doc" class="modal-dialog modal-sm" role="document">
+        <div class="modal-content">
+            <div class="modal-body">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title">Remove selected category?</h4>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal" onclick="removeCategory()">Yes</button>
             </div>
         </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
@@ -70,9 +87,9 @@
                 <li id="categoriesList" class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Category<span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li data-toggle="modal" data-target=".bs-example-modal-sm"><a href="#">New</a></li>
+                        <li data-toggle="modal" data-target="#new-cat-dlg"><a href="#">New</a></li>
                         <li><a href="#">Rename</a></li>
-                        <li><a href="#">Remove</a></li>
+                        <li data-toggle="modal" data-target="#remove-cat-dlg"><a href="#">Remove</a></li>
                         <li><a href="#">Edit history</a></li> <!---> show remove row / rename button-->
                     </ul>
                 </li>
