--- a/static/html/index.html
+++ b/static/html/index.html
@@ -93,6 +93,31 @@
 </div><!-- /.modal -->
 
 
+<!-- modal window for editing activity -->
+<div id="edit-act-dlg" class="modal fade" tabindex="-1" role="dialog">
+    <div id="edit-act-doc" class="modal-dialog modal-sm" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title">Edit activity</h4>
+            </div>
+            <div class="modal-body">
+                <form class="form-inline">
+                    <div class="form-group">
+                        <input id="new-activity-name" type="text" class="form-control" placeholder="New activity name">
+                        <input id="new-activity-poms" type="number" class="form-control" placeholder="1">
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                <button id="done-editing-button" type="button" class="btn btn-primary" data-dismiss="modal" onclick="updateActivity()">OK</button>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+
+
 <!-- navbar container -->
 <nav class="navbar navbar-inverse">
     <div class="container">
@@ -110,7 +135,7 @@
                         <li data-toggle="modal" data-target="#new-cat-dlg"><a href="#">New</a></li>
                         <li data-toggle="modal" data-target="#rename-cat-dlg"><a href="#">Rename</a></li>
                         <li data-toggle="modal" data-target="#remove-cat-dlg"><a href="#">Remove</a></li>
-                        <li><a href="#">Edit history</a></li> <!---> show remove row / rename button-->
+                        <li><a href="#">Edit history</a></li>
                     </ul>
                 </li>
             </ul>
@@ -129,7 +154,7 @@
 
                 <br>
 
-                <div class="tab-content" id="histView"></div>
+                <div class="tab-content" style="border-color: white; border-width: 2px; border-style: dashed" id="histView"></div>
             </div>
         </div>
     </div>
