minor changes to work with nginx

--- a/static/html/index.html
+++ b/static/html/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="/static/js/script.js"></script>
+    <script src="static/js/script.js"></script>
     <title>gtd</title>
 </head>
 <body>
@@ -163,7 +163,7 @@
         <!--let mainc = document.getElementById("mainContainer");-->
         <div id="notallowed-alert" class="alert alert-danger" role="alert">You are not allowed yet, sorry!</div>
         <div class="center-block">
-            <img src="/static/images/evo.png" width="65%" align="middle">
+            <img src="static/images/evo.png" width="65%" align="middle">
         </div>
     </div>
 </div><!-- /.container-fluid -->
